# use-stats

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  facade-publish-readiness.yml  publish-readiness.yml  release-plz-pr.yml  release-plz-release.yml  sbom.yml
crates/use-average/: Cargo.toml
crates/use-average/src/: lib.rs
crates/use-correlation/: Cargo.toml
crates/use-correlation/src/: lib.rs
crates/use-distribution/: Cargo.toml
crates/use-distribution/src/: lib.rs
crates/use-percentile/: Cargo.toml
crates/use-percentile/src/: lib.rs
crates/use-standard-deviation/: Cargo.toml
crates/use-standard-deviation/src/: lib.rs
crates/use-stats/: Cargo.toml  README.md
crates/use-stats/src/: lib.rs  prelude.rs
crates/use-variance/: Cargo.toml
crates/use-variance/src/: lib.rs
crates/use-z-score/: Cargo.toml
crates/use-z-score/src/: lib.rs
