[package]
name = "use-distribution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Basic distribution summaries and histogram helpers over f64 slices."
publish = true

[lints]
workspace = true
