[package]
name = "use-percentile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Percentile, quartile, and median helpers over f64 slices."
publish = true

[lints]
workspace = true
