[package]
name = "use-standard-deviation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Population and sample standard deviation helpers over f64 slices."
publish = true

[lints]
workspace = true
