[package]
name = "use-variance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Population and sample variance helpers over f64 slices."
publish = true

[lints]
workspace = true