[package]
name = "use-z-score"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Z-score helpers and simple normalization over f64 slices."
publish = true

[lints]
workspace = true